# hpqtypes-effectful

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  effectful-hpqtypes.cabal  flake.nix  fourmolu.yaml  hpqtypes-effectful.cabal  hpqtypes-effectuful.cabal
.github/workflows/: build.yml  fourmolu.yaml  haskell-ci.yml
examples/: OuterJoins.hs
lib/: MyLib.hs
src/Effectful/: HPQTypes.hs
test/: Main.hs
