cabal-version:      2.4
name:               effectful-hpqtypes
version:            0.1.0.0
synopsis:           Effectful bindings for hpqtypes

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kyriakos Papachrysanthou
maintainer:         kyriakos.papachrysanthou@scrive.com

-- A copyright notice.
-- copyright:
category:           Database
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:  Effectful.HPQTypes

  -- Modules included in this library but not exported.
  -- other-modules:

  ghc-options:
    -Wall -fno-warn-type-defaults -Wincomplete-record-updates
    -Wredundant-constraints -Wpartial-fields -Wincomplete-uni-patterns

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base               ^>=4.14.3.0
    , containers
    , effectful          ^>=0.1
    , exceptions
    , hpqtypes           ==1.9.4.0
    , text
    , transformers-base

  hs-source-dirs:   src
  default-language: Haskell2010
