cabal-version:      2.4
name:               effectful-hpqtypes
version:            0.1.0.0
synopsis:           Effectful bindings for hpqtypes

-- A longer description of the package.
-- description:
homepage:           https://github.com/haskell-effectful/hpqtypes-effectful

-- A URL where users can report bugs.
bug-reports:
  https://github.com/haskell-effectful/hpqtypes-effectful/issues

license:            BSD-3-Clause
license-file:       LICENSE
author:             Scrive AB
maintainer:         haskell-effectful maintainers

-- A copyright notice.
-- copyright:
category:           Database
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:  Effectful.HPQTypes

  -- Modules included in this library but not exported.
  -- other-modules:

  ghc-options:
    -Wall -fno-warn-type-defaults -Wincomplete-record-updates
    -Wredundant-constraints -Wpartial-fields -Wincomplete-uni-patterns

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base               >=4.13    && <5
    , effectful-core     >=1.1.1.0 && < 1.2.0.0
    , exceptions
    , hpqtypes           ==1.9.4.0

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite hpqtypes-effectful-tests
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -threaded
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base                >=4.13    && <5
    , effectful-core
    , effectful-hpqtypes
    , exceptions
    , hpqtypes
    , tasty
    , tasty-hunit
    , text
    , transformers-base
