cabal-version:      3.0
build-type:         Simple
name:               hpqtypes-effectful
version:            1.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
category:           Database
maintainer:         andrzej@rybczak.net, jakub.waszczuk@scrive.com
author:             Scrive AB
synopsis:           Adaptation of the hpqtypes library for the effectful ecosystem.

description:        Adaptation of the @<https://hackage.haskell.org/package/hpqtypes hpqtypes>@ library for the @<https://hackage.haskell.org/package/effectful effectful>@ ecosystem.
homepage:           https://github.com/haskell-effectful/hpqtypes-effectful

extra-source-files:
  CHANGELOG.md
  README.md

tested-with: GHC == { 9.2.8, 9.4.8, 9.6.7, 9.8.4, 9.10.3, 9.12.2, 9.14.1 }

bug-reports: https://github.com/haskell-effectful/hpqtypes-effectful/issues
source-repository head
  type:     git
  location: https://github.com/haskell-effectful/hpqtypes-effectful

common language
    ghc-options:        -Wall -Wcompat -Wredundant-constraints
                        -Wno-unticked-promoted-constructors
                        -Werror=prepositive-qualified-module

    default-language:   Haskell2010

    default-extensions: BangPatterns
                        ConstraintKinds
                        DataKinds
                        DeriveFunctor
                        DeriveGeneric
                        DerivingStrategies
                        FlexibleContexts
                        FlexibleInstances
                        ImportQualifiedPost
                        GADTs
                        GeneralizedNewtypeDeriving
                        LambdaCase
                        MultiParamTypeClasses
                        NoStarIsType
                        RankNTypes
                        RoleAnnotations
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeOperators
                        UndecidableInstances

library
  import:          language

  build-depends:   base               >= 4.16      && < 5
                 , effectful-core     >= 2.5.0.0   && < 3.0.0.0
                 , hpqtypes           >= 1.13.0.0  && < 1.14.0.0

  hs-source-dirs:   src

  exposed-modules:  Effectful.HPQTypes

test-suite test
  import:          language

  ghc-options:    -threaded

  build-depends:  base
                , effectful-core
                , hpqtypes-effectful
                , resource-pool
                , tasty
                , tasty-hunit
                , text

  hs-source-dirs: examples test

  -- Include examples to make sure they compile.
  other-modules:  OuterJoins

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
