cabal-version:      2.4
name:               hpqtypes-effectuful
version:            0.1.0.0
synopsis:           Effectful bindings for hpqtypes

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Kyriakos Papachrysanthou
maintainer:         kyriakos.papachrysanthou@scrive.com

-- A copyright notice.
-- copyright:
category:           Database
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    ghc-options:
      -Wall -fno-warn-type-defaults -Wincomplete-record-updates
      -Wredundant-constraints -Wpartial-fields -Wincomplete-uni-patterns

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , effectful == 0.1.*
                    , hpqtypes == 1.9.4.0
                    , transformers-base
                    , exceptions
                    , containers
                    , text

    hs-source-dirs:   lib
    default-language: Haskell2010
